--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="76b067">  <td>21/07/16 23:14:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registration(java.util.Hashtable)[pri:1, instance:org.testcases.RegistrationTest@646007f4]">registration</td> 
-  <td>main@1660794022</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>21/07/16 23:14:06</td>   <td>5636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.fundTransfer(java.util.Hashtable)[pri:2, instance:org.testcases.RegistrationTest@646007f4]">fundTransfer</td> 
-  <td>main@1660794022</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>21/07/16 23:14:20</td>   <td>19674</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegistrationTest.teardown()[pri:0, instance:org.testcases.RegistrationTest@646007f4]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1660794022</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>21/07/16 23:13:50</td>   <td>-9659</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.setup()[pri:0, instance:org.testcases.RegistrationTest@646007f4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1660794022</td>   <td></td> </tr>
-<tr bgcolor="76b067">  <td>21/07/16 23:14:13</td>   <td>13002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.accountActivity(java.util.Hashtable)[pri:3, instance:org.testcases.RegistrationTest@646007f4]">accountActivity</td> 
-  <td>main@1660794022</td>   <td></td> </tr>
+<tr bgcolor="a16370">  <td>21/07/17 15:36:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registration(java.util.Hashtable)[pri:1, instance:org.testcases.RegistrationTest@20d3d15a]">registration</td> 
+  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="a16370">  <td>21/07/17 15:36:28</td>   <td>6193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.fundTransfer(java.util.Hashtable)[pri:2, instance:org.testcases.RegistrationTest@20d3d15a]">fundTransfer</td> 
+  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="a16370">  <td>21/07/17 15:36:32</td>   <td>10248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.accountActivity(java.util.Hashtable)[pri:3, instance:org.testcases.RegistrationTest@20d3d15a]">accountActivity</td> 
+  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="a16370">  <td>21/07/17 15:36:13</td>   <td>-8790</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.setup()[pri:0, instance:org.testcases.RegistrationTest@20d3d15a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="a16370">  <td>21/07/17 15:36:39</td>   <td>17096</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegistrationTest.teardown()[pri:0, instance:org.testcases.RegistrationTest@20d3d15a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
 </table>
