--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,17 +104,17 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="org.testcases.RegistrationTest" hash-for-method="accountActivity({ActivityPeriod=July, Type=Debit})">accountActivity({ActivityPeriod=July, Type=Debit})</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="org.testcases.AccountsActivityTest" hash-for-method="accountActivity({ActivityPeriod=July, Type=Debit})">accountActivity({ActivityPeriod=July, Type=Debit})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="org.testcases.RegistrationTest" hash-for-method="fundTransfer({Amount=120.0})">fundTransfer({Amount=120.0})</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="org.testcases.FundsTransferTest" hash-for-method="fundTransfer({Amount=120.0})">fundTransfer({Amount=120.0})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="org.testcases.RegistrationTest" hash-for-method="registration({ConfirmPassword=password, Username=1234897, Phone=01135314748900, Address=cccc, firstname=aaaa, las...)">registration({ConfirmPassword=password, Username=1234897, Phone=01135314748900, Address=cccc, firstname=aaaa, las...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="org.testcases.RegistrationTest" hash-for-method="registration({ConfirmPassword=password, Username=1234899, Phone=01135314748900, Address=cccc, firstname=aaaa, las...)">registration({ConfirmPassword=password, Username=1234899, Phone=01135314748900, Address=cccc, firstname=aaaa, las...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -132,17 +132,9 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">org.testcases.RegistrationTest</span>
+              <span class="class-name">org.testcases.FundsTransferTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="accountActivity({ActivityPeriod=July, Type=Debit})">
-                  </a> <!-- accountActivity({ActivityPeriod=July, Type=Debit}) -->
-                  <span class="method-name">accountActivity</span>
-                  <span class="parameters">({ActivityPeriod=July, Type=Debit})</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="fundTransfer({Amount=120.0})">
@@ -151,12 +143,36 @@
                   <span class="parameters">({Amount=120.0})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">org.testcases.RegistrationTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="registration({ConfirmPassword=password, Username=1234897, Phone=01135314748900, Address=cccc, firstname=aaaa, las...)">
-                  </a> <!-- registration({ConfirmPassword=password, Username=1234897, Phone=01135314748900, Address=cccc, firstname=aaaa, las...) -->
+                  <a name="registration({ConfirmPassword=password, Username=1234899, Phone=01135314748900, Address=cccc, firstname=aaaa, las...)">
+                  </a> <!-- registration({ConfirmPassword=password, Username=1234899, Phone=01135314748900, Address=cccc, firstname=aaaa, las...) -->
                   <span class="method-name">registration</span>
-                  <span class="parameters">({ConfirmPassword=password, Username=1234897, Phone=01135314748900, Address=cccc, firstname=aaaa, lastname=bbbb, Password=password, runmode=Y, City=Dublin, ZipCode=15, SSN=4128336663, State=cork})</span>
+                  <span class="parameters">({ConfirmPassword=password, Username=1234899, Phone=01135314748900, Address=cccc, firstname=aaaa, lastname=bbbb, Password=password, runmode=Y, City=Dublin, ZipCode=15, SSN=4128336663, State=cork})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">org.testcases.AccountsActivityTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="accountActivity({ActivityPeriod=July, Type=Debit})">
+                  </a> <!-- accountActivity({ActivityPeriod=July, Type=Debit}) -->
+                  <span class="method-name">accountActivity</span>
+                  <span class="parameters">({ActivityPeriod=July, Type=Debit})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -177,6 +193,8 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;org.testcases.RegistrationTest&quot;/&gt;
+      &lt;class name=&quot;org.testcases.FundsTransferTest&quot;/&gt;
+      &lt;class name=&quot;org.testcases.AccountsActivityTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -190,7 +208,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -219,21 +237,21 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'accountActivity')
-data.setCell(0, 2, 'org.testcases.RegistrationTest')
-data.setCell(0, 3, 6844);
+data.setCell(0, 2, 'org.testcases.AccountsActivityTest')
+data.setCell(0, 3, 7782);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'registration')
 data.setCell(1, 2, 'org.testcases.RegistrationTest')
-data.setCell(1, 3, 6155);
+data.setCell(1, 3, 6300);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'fundTransfer')
-data.setCell(2, 2, 'org.testcases.RegistrationTest')
-data.setCell(2, 3, 4043);
+data.setCell(2, 2, 'org.testcases.FundsTransferTest')
+data.setCell(2, 3, 4758);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 18 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -260,26 +278,35 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">org.testcases.RegistrationTest</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
+              <div class="configuration-suite before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">registration({ConfirmPassword=password, Username=1234897, Phone=01135314748900, Address=cccc, firstname=aaaa, las...)</span>
-                <span class="method-start">8802 ms</span>
+                <span class="method-name">registration({ConfirmPassword=password, Username=1234899, Phone=01135314748900, Address=cccc, firstname=aaaa, las...)</span>
+                <span class="method-start">10013 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">org.testcases.FundsTransferTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">fundTransfer({Amount=120.0})</span>
-                <span class="method-start">14995 ms</span>
+                <span class="method-start">16373 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">org.testcases.AccountsActivityTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">accountActivity({ActivityPeriod=July, Type=Debit})</span>
-                <span class="method-start">19050 ms</span>
+                <span class="method-start">21142 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">org.testcases.RegistrationTest</div> <!-- chronological-class-name -->
+              <div class="configuration-suite after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">25898 ms</span>
-              </div> <!-- configuration-class after -->
+                <span class="method-start">29427 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
