--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a16370">  <td>21/07/17 15:36:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.accountActivity(java.util.Hashtable)[pri:3, instance:org.testcases.RegistrationTest@20d3d15a]">accountActivity</td> 
-  <td>main@1157726741</td>   <td></td> </tr>
-<tr bgcolor="a16370">  <td>21/07/17 15:36:28</td>   <td>-4055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.fundTransfer(java.util.Hashtable)[pri:2, instance:org.testcases.RegistrationTest@20d3d15a]">fundTransfer</td> 
-  <td>main@1157726741</td>   <td></td> </tr>
-<tr bgcolor="a16370">  <td>21/07/17 15:36:22</td>   <td>-10248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registration(java.util.Hashtable)[pri:1, instance:org.testcases.RegistrationTest@20d3d15a]">registration</td> 
-  <td>main@1157726741</td>   <td></td> </tr>
-<tr bgcolor="a16370">  <td>21/07/17 15:36:13</td>   <td>-19038</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.setup()[pri:0, instance:org.testcases.RegistrationTest@20d3d15a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
-<tr bgcolor="a16370">  <td>21/07/17 15:36:39</td>   <td>6848</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegistrationTest.teardown()[pri:0, instance:org.testcases.RegistrationTest@20d3d15a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="95b596">  <td>21/07/18 21:20:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsActivityTest.accountActivity(java.util.Hashtable)[pri:3, instance:org.testcases.AccountsActivityTest@5af97850]">accountActivity</td> 
+  <td>main@26728049</td>   <td></td> </tr>
+<tr bgcolor="ab6bfb">  <td>21/07/18 21:20:33</td>   <td>-4769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FundsTransferTest.fundTransfer(java.util.Hashtable)[pri:0, instance:org.testcases.FundsTransferTest@17c386de]">fundTransfer</td> 
+  <td>main@26728049</td>   <td></td> </tr>
+<tr bgcolor="a16370">  <td>21/07/18 21:20:27</td>   <td>-11129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registration(java.util.Hashtable)[pri:0, instance:org.testcases.RegistrationTest@2ed0fbae]">registration</td> 
+  <td>main@26728049</td>   <td></td> </tr>
+<tr bgcolor="a16370">  <td>21/07/18 21:20:17</td>   <td>-21134</td> <td title="&gt;&gt;RegistrationTest.setup()[pri:0, instance:org.testcases.RegistrationTest@2ed0fbae]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26728049</td>   <td></td> </tr>
+<tr bgcolor="a16370">  <td>21/07/18 21:20:46</td>   <td>8285</td> <td title="&lt;&lt;RegistrationTest.teardown()[pri:0, instance:org.testcases.RegistrationTest@2ed0fbae]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26728049</td>   <td></td> </tr>
 </table>
